stream complete lines when restoring page state